k8s/apply/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedding-guest-api-deployment
  namespace: juju-wedding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      volumes:
      - name: wedding-nodejs-api-volume
        persistentVolumeClaim:
          claimName: pvc-nfs-wedding-nodejs-api
      containers:
      - name: wedding-guest-api
        image: jujubeee314/wedding-guest-api:2022.13
        resources: 
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /usr/src/app/upload/photos
            name: wedding-nodejs-api-volume
