k8s/apply/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedding-guest-api-deployment
  namespace: juju-wedding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: wedding-guest-api
        image: jujubeee314/wedding-guest-api:2022.6
        resources: 
        imagePullPolicy: Always
