k8s/apply/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-guest-api-service
  namespace: juju-wedding
spec:
  selector:
    app: node-app 
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
