k8s/apply/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wedding-guest-api-ingress
  namespace: juju-wedding
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
      - api.wedding.justinmendoza.net
      secretName: wedding-guest-api-tls
  rules:
    - host: api.wedding.justinmendoza.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wedding-guest-api-service
                port:
                  number: 4000
